--- a/frontend/src/Authpage/SignupPage.module.css
+++ b/frontend/src/Authpage/SignupPage.module.css
@@ -16,6 +16,34 @@
   flex-direction: row-reverse;
   align-items: center;
 }
+.nav {
+  position: absolute;
+  top: 30px;
+  right: 40px;
+  display: flex;
+  gap: 2.5rem;
+  z-index: 10;
+}
+
+.navLink {
+  color: rgb(0, 255, 234);
+  font-weight: 600;
+  font-size: 1.1rem;
+  cursor: pointer;
+  padding: 10px 20px;
+  border-radius: 25px;
+  transition: all 0.3s ease;
+  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+    background: rgba(255, 255, 255, 0.1);
+
+  
+}
+
+.navLink:hover {
+  color: #0fd2ff;
+  background: rgba(255, 255, 255, 0.512);
+  transform: translateY(-2px);
+}
 .signupBox {
   width: 30%;
   height: auto;
