--- a/frontend/src/Authpage/SignupPage.module.css
+++ b/frontend/src/Authpage/SignupPage.module.css
@@ -1,7 +1,7 @@
 .container {
   width: 100%;
   height: 100vh;
-  background-image: url("media/authImage.jpg");
+  background-image: url("/media/authImage.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
