--- a/frontend/src/LandingPage.module.css
+++ b/frontend/src/LandingPage.module.css
@@ -6,7 +6,7 @@
 .landingPage {
   height: 100dvh;
   width: 100%;
-  background-image: url("media/homeImage.jpg");
+  background-image: url("/media/homeImage.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
